--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 *.png
+.idea/DL_miniproject.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
